src/gc-arena/tests/ui/bad_collect_bound.stderr
error[E0277]: the trait bound `NotCollect: Collect` is not satisfied
  --> $DIR/bad_collect_bound.rs:8:5
   |
8  |     field: NotCollect
   |     ^^^^^^^^^^^^^^^^^ the trait `Collect` is not implemented for `NotCollect`
   |
  ::: $WORKSPACE/src/gc-arena/src/collect.rs
   |
   |         Self: Sized,
   |               ----- required by this bound in `needs_trace`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotCollect: Collect` is not satisfied
 --> $DIR/bad_collect_bound.rs:8:5
  |
8 |     field: NotCollect
  |     ^^^^^^^^^^^^^^^^^ the trait `Collect` is not implemented for `NotCollect`
  |
  = note: required by `trace`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
